Closed Bug 17727 Opened 25 years ago Closed 25 years ago

font changes when text control gets first focus

Categories

(Core :: Layout: Form Controls, defect, P4)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: desale, Assigned: buster)

References

()

Details

Password is not showing stars, and instead it is showing actual value for
default values. If we click inside the password field after loading the page
then it converts the actual value in stars.
If we try some default value with text box [By creating text box by not
specifying input type in HTML code] and if we click inside the text box after
loading the page then we can see onclick the font changes.

BUILDS: 11-01-09.

STEPS TO REPRODUCE:
1] Please copy the HTML code I'm providing. Save it as HTML file.
2] Open this HTML file with apprunner with above specified builds.
3] Click in textbox.
4] Click in password.

EXPECTED RESULTS:
Onloading page, the password value should be in stars.
After clicking inside textbox, the text font should not change.

ACTUAL RESULTS:
Onloading the page, password shows actual value instead of showing value as
stars.
Onclicking inside password, it changes value to stars.
Onclicking inside textbox, font of text changes.

TESTCASE CODE START:

<HTML>
<HEAD>
<TITLE> TEST PAGE </TITLE>
</HEAD>
<BODY>
<FORM >
Text Box: [Without specifying input type in HTML code] <INPUT  NAME="tex1"
VALUE="Text value"><br>
Password: <INPUT TYPE="password" NAME="pass1" VALUE="passvalue">

</FORM>
</BODY>
</HTML>

TESTCASE CODE END:
Assignee: karnaze → buster
Reassigning to Steve.
Status: NEW → ASSIGNED
Priority: P3 → P2
Summary: Password not showing stars for default values unless we click inside the field. → [dogfood] Password not showing stars for default values unless we click inside the field.
Target Milestone: M11
great bug report.  thanks for catching this.  It's a fairly easy fix, I'm on it.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
fixed. change is in nsGfxTextControl.cpp.  I used to just blindly set the text
of the underlying text frame.  Now I check if it's a password field,  and
replace the display text with '*' if it is.
Status: RESOLVED → VERIFIED
Verified in the 1999110508 build under NT. Thanks for the bug report!
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Actually one Part of this bug is fixed, but other seems to be still there.
Providing one more testcase just to explain other part which is not fixed.

If we try some default value with text box [By creating text box by not
specifying input type in HTML code] and if we click inside the text box after
loading the page then we can see that onclick the font of text inside textbox
changes.

BUILDS: 1999-11-10-09.

STEPS TO REPRODUCE:
1] Please copy the HTML code I'm providing. Save it as HTML file.
2] Open this HTML file with apprunner with above specified builds.
3] Click in textbox.

EXPECTED RESULTS:
After clicking inside textbox, the text font should not change.

ACTUAL RESULTS:
Onclicking inside textbox, font of text changes.

TESTCASE CODE START:

<HTML>
<HEAD>
<TITLE> TEST PAGE </TITLE>
</HEAD>
<BODY>
<FORM >
Text Box: [Without specifying input type in HTML code] <br>
Please Click in TextBox Belove<br>
<INPUT  NAME="tex1" VALUE="Text value"><br>
</FORM>
</BODY>
</HTML>

TESTCASE CODE END:
Severity: normal → minor
Status: REOPENED → ASSIGNED
Priority: P2 → P4
Summary: [dogfood] Password not showing stars for default values unless we click inside the field. → font changes when text control gets first focus
Target Milestone: M11 → M14
the main problem in the initial bug report has been fixed.  The "font switch on
focus" problem is minor, so I'm setting Priority=P4, Severity=minor, and target
milestone=M14.  It's just a style sheet thing, probably, because it only happens
when you get a text control by "default" like so:
    <input>
instead of the more rational
    <input type=text>
so the style sheet probably just needs to be taught that these two are
equivalent.  that might mean some additional work for adding style rules for
other input types that might have relied on some default behavior, needs
investigation.
removed [dogfood] because the part of this that was a dogfood issue has been
fixed.
The font changing when the text control gets first focus problem is well covered
in bug 18232 - and as the original problem (or at least the first problem)
discussed in this bug report has indeed been fixed, I'd like to close and verify
this bug again. desale, is that ok with you? thanks!
Sure chris, Since its covered in bug# 18232, we can mark this bug fixed and
verified.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.