bug 17727 ([dogfood] Password not showing stars for default values unless we click inside the field.) r=brade

change is in nsGfxTextControl.cpp.  I used to just blindly set the text of the underlying text frame.
Now I check if it's a password field, and replace the display text with '*' if it is.